# rust-for-iot

upload_svc/: Cargo.toml  Dockerfile
